Personal/src/objects/ALL_RecordsFilter_Conditions__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Criteria__c</fullName>
        <label>Filter Criteria</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <type>TextArea</type>
    </fields>
    <label>ALL Records Filter  Conditions</label>
</CustomObject>